k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: fsl-challenge.me
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: app-service
            port:
              number: 80
